# torchrl-hydra-template

./: AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
configs/: eval.yaml  train.yaml
configs/algorithm/: dqn.yaml  ppo.yaml  reinforce.yaml
configs/environment/: atari_pong.yaml  cartpole.yaml  halfcheetah.yaml  pendulum.yaml
configs/experiment/dqn/: atari_pong.yaml  cartpole.yaml
configs/experiment/ppo/: halfcheetah.yaml  pendulum.yaml
configs/experiment/reinforce/: pendulum.yaml
configs/logger/: csv.yaml  tensorboard.yaml  wandb.yaml
csv_logs/train/scalars/: ESS.csv  action_norm.csv  action_norm_std.csv  clip_fraction.csv  done_percentage.csv  entropy.csv  grad_norm_0.csv  kl_approx.csv  loss.csv  loss_actor.csv  loss_critic.csv  loss_entropy.csv  loss_objective.csv  loss_value.csv  max_ratio.csv  mean_ratio.csv  optim_steps.csv  r_max.csv  r_total.csv  r_training.csv  r_training_std.csv  update_count.csv  utd_ratio.csv  write_count.csv
multirun/2026-05-06/13-58-54/: multirun.yaml
multirun/2026-05-06/13-58-54/0/.hydra/: config.yaml  hydra.yaml  overrides.yaml
notebooks/torchrl-tutorials/: DQN-Trainer.ipynb
src/: eval.py  train.py
src/algorithms/: base.py  dqn.py  dqn_replay_buffer.py  ppo.py  reinforce.py
src/algorithms/reinforce/: configs.py  trainer.py
src/callbacks/: checkpoint.py
src/environments/: environment.py  factory.py
src/networks/: atari.py
src/trainers/: BaseTrainer.py  StepTrainer.py  __init__.py
src/utils/: __init__.py  instantiate.py
tests/: test_smoke.py
